index + manifest NL

--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Art by Philip Davidsson - unique oil and acrylic paintings"
+      content="Kunst van Philip Davidsson - unieke olie and acryl schilderijen - Utrecht"
     />
     <meta
-      name="keywords" content="art, artist, painting, oil, acrylic, canvas, philip, davidsson" />
+      name="keywords" content="kunst, schilderijen, olie, acryl, utrecht, philip, davidsson" />
     <meta name="google-site-verification" content="N8Yp94cHdWB_BQl4jqBq-z8phnTbkgMRrzAn252Louk" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Philip Davidsson</title>
